manifests/Istio-cilium/02-namespace.yaml
#Create application namespace with Istio injection

apiVersion: v1
kind: Namespace
metadata:
  name: mesh-lab
  labels:
    istio-injection: enabled
