manifests/Istio-cilium/20-load-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgen
  namespace: mesh-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgen
  template:
    metadata:
      labels:
        app: loadgen
    spec:
      containers:
        - name: loadgen
          image: busybox
          command: ["/bin/sh", "-c"]
          args:
            - "while true; do wget -q -O- http://frontend:8080/; done"
