manifests/Istio-cilium/10-destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: frontend-dr
  namespace: mesh-lab
spec:
  host: frontend.mesh-lab.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
