manifests/Istio-cilium/18-cnp-toolbox-to-apps.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: toolbox-to-apps
  namespace: mesh-lab
spec:
  endpointSelector:
    matchLabels:
      app: toolbox
  egress:
    - toEndpoints:
        - matchLabels:
            app: frontend
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: backend
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
