manifests/Istio-cilium/cnp-allow-pods-to-istiod.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-istiod
  namespace: mesh-lab
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-system
            k8s:app: istiod
      toPorts:
        - ports:
            - port: "15012"
              protocol: TCP
            - port: "15017"
              protocol: TCP
